--- a/styleforprofile.css
+++ b/styleforprofile.css
@@ -1,3 +1,181 @@
-body{
+html,
+body {
+  height: 100%;
   margin: 0;
-background: linear-gradient(135deg, rgba(208, 65, 94, 1.000) 0.000%, rgba(208, 65, 94, 1.000) 20.000%, rgba(214, 87, 103, 1.000) 20.000%, rgba(214, 87, 103, 1.000) 40.000%, rgba(219, 121, 113, 1.000) 40.000%, rgba(219, 121, 113, 1.000) 60.000%, rgba(224, 165, 124, 1.000) 60.000%, rgba(224, 165, 124, 1.000) 80.000%, rgba(230, 216, 134, 1.000) 80.000% 100.000%)}
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  background: linear-gradient(135deg, rgba(208, 65, 94, 1.000) 0.000%, rgba(208, 65, 94, 1.000) 20.000%, rgba(214, 87, 103, 1.000) 20.000%, rgba(214, 87, 103, 1.000) 40.000%, rgba(219, 121, 113, 1.000) 40.000%, rgba(219, 121, 113, 1.000) 60.000%, rgba(224, 165, 124, 1.000) 60.000%, rgba(224, 165, 124, 1.000) 80.000%, rgba(230, 216, 134, 1.000) 80.000% 100.000%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow-y: hidden;
+}
+
+/* NAV */
+.container-nav ul {
+  display: flex;
+  justify-content: space-around;
+  font-family: "Outfit", sans-serif;
+}
+
+.container-nav ul li {
+  list-style: none;
+
+}
+
+.container-nav ul li a {
+  text-decoration: none;
+  color: inherit;
+  border: none;
+  outline: none;
+
+}
+
+.container-nav ul li a:hover {
+  color: #902553;
+  border-bottom: 3px solid #902553;
+  transition: all .5s;
+}
+
+.container-nav {
+  font-size: 1.5rem;
+  padding: 1rem;
+}
+
+.icono-agregar {
+  color: #270763;
+  font-size: 2rem;
+  padding-left: .3rem;
+}
+
+.icono-agregar:hover {
+  color: #4711ab;
+}
+
+.icono-inicio {
+  color: #610033;
+  font-size: 2rem;
+  padding-left: .3rem;
+}
+
+.icono-inicio:hover {
+  color: #990453;
+}
+
+.exit {
+  font-size: 2rem;
+  color: rgb(248, 20, 20);
+  padding-left: .3rem;
+}
+
+.exit:hover {
+  color: rgb(247, 134, 134);
+}
+
+/* CONTAINER */
+.container {
+  height: 90%;
+  background: #faebd7a6;
+  width: 90vw;
+  margin: 2rem auto;
+  border-radius: 3rem;
+}
+
+/* INFORMACION */
+
+.ver-informacion {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 3rem;
+
+}
+
+.icono-user {
+  font-size: 15rem;
+}
+
+.titulo-informacion {
+  font-size: 2rem;
+  font-family: "Tagesschrift", system-ui;
+  margin: 0;
+}
+
+.lista {
+  padding: 0;
+}
+
+.lista li {
+  padding: .5rem;
+  font-family: "Outfit", sans-serif;
+  list-style: none;
+  font-size: 1.5rem;
+  word-spacing: .5rem;
+}
+
+.eliminar-perfil {
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5rem;
+  margin: 2rem 0;
+  font-family: "Outfit", sans-serif;
+}
+
+.form-eliminar {
+  padding: 1rem;
+}
+
+.btn-form {
+  padding: 1rem;
+  border-radius: 1rem;
+  margin-left: 1rem;
+  font-size: 1.3rem;
+  background: #99045390;
+  color: aliceblue;
+  font-family: "Outfit", sans-serif;
+  ;
+}
+
+/* SECCION ESCONDIDA*/
+
+.section-escondida {
+  text-align: center;
+  font-family: "Outfit", sans-serif;
+  display: none;
+}
+
+.section-escondida p {
+  font-size: 1.5rem;
+}
+
+.section-escondida label {
+  font-size: 1.2rem;
+}
+
+.password {
+  width: 20rem;
+  height: 2rem;
+  border-radius: .5rem;
+  padding: .3rem;
+  font-size: 1.2rem;
+  margin-left: 1rem;
+}
+
+.cambiar {
+  background: #99045390;
+  color: aliceblue;
+  font-family: "Outfit", sans-serif;
+  margin-left: 1rem;
+  padding: 1.2rem;
+  border-radius: 1rem;
+  font-size: 1.2rem;
+  
+}
+.cambiar:hover ,.btn-form:hover{
+  background: #cb077090;
+  color: rgb(231, 241, 250);
+  border: 2px solid #cb076fe3; ;
+}
