--- a/style.css
+++ b/style.css
@@ -2,6 +2,52 @@ body{
 margin: 0;
 background: linear-gradient(90deg, rgba(97, 0, 51, 1.000) 0.000%, rgba(97, 0, 51, 1.000) 7.692%, rgba(109, 0, 48, 1.000) 7.692%, rgba(109, 0, 48, 1.000) 15.385%, rgba(127, 0, 49, 1.000) 15.385%, rgba(127, 0, 49, 1.000) 23.077%, rgba(149, 14, 52, 1.000) 23.077%, rgba(149, 14, 52, 1.000) 30.769%, rgba(175, 29, 57, 1.000) 30.769%, rgba(175, 29, 57, 1.000) 38.462%, rgba(200, 45, 65, 1.000) 38.462%, rgba(200, 45, 65, 1.000) 46.154%, rgba(223, 62, 76, 1.000) 46.154%, rgba(223, 62, 76, 1.000) 53.846%, rgba(241, 78, 88, 1.000) 53.846%, rgba(241, 78, 88, 1.000) 61.538%, rgba(253, 93, 101, 1.000) 61.538%, rgba(253, 93, 101, 1.000) 69.231%, rgba(255, 108, 116, 1.000) 69.231%, rgba(255, 108, 116, 1.000) 76.923%, rgba(252, 123, 130, 1.000) 76.923%, rgba(252, 123, 130, 1.000) 84.615%, rgba(239, 136, 145, 1.000) 84.615%, rgba(239, 136, 145, 1.000) 92.308%, rgba(220, 148, 158, 1.000) 92.308% 100.000%)
 }
+/* IDIOMA*/
+
+.ul-idioma {
+  list-style: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.3rem;
+  position: relative;
+  text-align: end;
+  margin: 1rem 8rem;
+  cursor: pointer;
+
+}
+
+.ul-container {
+  position: absolute;
+  margin-top: 1rem;
+  right: -2rem;
+  background: rgb(241, 234, 234);
+  border: 1px solid #ccc;
+  padding: .5rem;
+  border-radius: .5rem;
+  border: 1px solid #ccc;
+  display: none;
+  min-width: 2rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.lista-idioma {
+  padding: .3em 0;
+  list-style: none;
+
+}
+
+.lista-idioma a {
+  color: black;
+  text-decoration: none;
+  color: #333;
+  display: block;
+}
+.lista-idioma a:hover{
+ color: rgb(154, 30, 102);
+}
+.ul-idioma li.opcion:hover .ul-container {
+  display: block;
+}
+
 .container{
     display: flex;
     justify-content: center;
