--- a/styleforinicio.css
+++ b/styleforinicio.css
@@ -3,6 +3,67 @@ body {
   background: linear-gradient(135deg, rgba(208, 65, 94, 1.000) 0.000%, rgba(208, 65, 94, 1.000) 20.000%, rgba(214, 87, 103, 1.000) 20.000%, rgba(214, 87, 103, 1.000) 40.000%, rgba(219, 121, 113, 1.000) 40.000%, rgba(219, 121, 113, 1.000) 60.000%, rgba(224, 165, 124, 1.000) 60.000%, rgba(224, 165, 124, 1.000) 80.000%, rgba(230, 216, 134, 1.000) 80.000% 100.000%)
 }
 
+/* IDIOMA*/
+.idioma{
+  display: flex;
+  justify-content: end;
+}
+.opcion{
+  text-decoration: underline;
+  border-radius: .5rem;
+  padding: .5rem;
+}
+.opcion:hover{
+  background: rgb(241, 234, 234);
+  transition: all .1s ease-in-out;
+}
+.ul-idioma {
+  list-style: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.3rem;
+  position: relative;
+  text-align: end;
+  margin: 1rem 8rem  0 0;
+  cursor: pointer;
+  
+}
+
+
+.ul-container {
+  position: absolute;
+  margin-top: 1rem;
+  right: -2rem;
+  background: rgb(241, 234, 234);
+  border: 1px solid #ccc;
+  padding: .5rem;
+  border-radius: .5rem;
+  border: 1px solid #ccc;
+  display: none;
+  min-width: 2rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.lista-idioma {
+  padding: .3em 0;
+  list-style: none;
+
+}
+
+.lista-idioma a {
+  color: black;
+  text-decoration: none;
+  color: #333;
+  display: block;
+}
+.lista-idioma a:hover{
+ color: rgb(154, 30, 102);
+}
+.ul-idioma li.opcion:hover .ul-container {
+  display: block;
+}
+
+/*BODY CONTAINER*/
+
 .container {
   height: 70%;
   background: #faebd7a6;
@@ -17,43 +78,52 @@ body {
   display: flex;
   justify-content: space-around;
 }
-.container-exit ul li{
+
+.container-exit ul li {
   list-style: none;
 
 }
-.container-exit ul li a{
-   text-decoration: none;  
+
+.container-exit ul li a {
+  text-decoration: none;
   color: inherit;
   border: none;
   outline: none;
-   
+
 }
-.container-exit ul li a:hover{
+
+.container-exit ul li a:hover {
   color: #902553;
- border-bottom:3px solid #902553 ;
- transition: all .5s;
+  border-bottom: 3px solid #902553;
+  transition: all .5s;
 }
+
 .container-exit {
   font-size: 1.5rem;
   padding: 1rem;
-    font-family: "Outfit", sans-serif;
+  font-family: "Outfit", sans-serif;
 }
-.icono-agregar{
+
+.icono-agregar {
   color: #270763;
   font-size: 2rem;
   padding-left: .3rem;
 }
-.icono-agregar:hover{
+
+.icono-agregar:hover {
   color: #4711ab;
 }
-.icono-inicio{
+
+.icono-inicio {
   color: #610033;
   font-size: 2rem;
   padding-left: .3rem;
 }
-.icono-inicio:hover{
-color: #990453;
+
+.icono-inicio:hover {
+  color: #990453;
 }
+
 .exit {
   font-size: 2rem;
   color: rgb(248, 20, 20);
@@ -72,7 +142,7 @@ color: #990453;
 }
 
 .titulo {
-  font-size:3.3rem;
+  font-size: 3.3rem;
   margin: 0;
   letter-spacing: 1px;
   padding: 1rem;
@@ -82,7 +152,7 @@ color: #990453;
 .parrafo-container-bienvenida {
   font-size: 2rem;
   margin: 1rem;
-    font-family: "Playfair Display", serif;
+  font-family: "Playfair Display", serif;
   font-style: italic;
 }
 
@@ -110,7 +180,7 @@ th {
   color: #fcede6;
   font-family: "Outfit", sans-serif;
   letter-spacing: 1px;
-  
+
 
 }
 
@@ -123,7 +193,7 @@ th {
   border: 1px solid #610033;
   border-radius: 10px;
   overflow: hidden;
-  
+
 }
 
 thead {
@@ -153,8 +223,8 @@ thead {
   background: #ffffff;
   border-radius: 50%;
   border: 3px solid rgb(87, 159, 87);
-  
-  
+
+
 }
 
 .eliminar {
@@ -167,60 +237,68 @@ thead {
 .eliminar:hover {
   color: #c00613;
   background: #fbfbfb;
-  }
-  /*AGREGAR TAREA ESTILO*/
-  .parrafo-tarea {
-    font-size: 1.7rem;
-    letter-spacing: 1px;
-     font-family: "Outfit", sans-serif;
-     text-decoration: 3px underline #4e529b;
-     border-bottom: 2px solid rgb(117, 12, 82);
-     margin: 1rem 0 0 0 ;
-  
-  }
-  .agregar-tarea{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-  }
-  .form-ingresar{
-    display: flex;
-    flex-direction: column;
-    font-family: "Outfit", sans-serif;
-    font-size: 1.5rem;
-    letter-spacing: 1.1px;
-  }
-  .form-ingresar label{
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-  }
-  .form-ingresar input{
-    padding: 1rem;
-    margin: 1rem 0;
-    width: 20rem;
-   font-family: "Roboto", sans-serif;
-   font-size: 1.2rem;
-   letter-spacing: 2px;
-  }
-  .input-grande{
-    width: 20rem;
-    height: 5rem;
-  }
-#btn-agregar{
+}
+
+/*AGREGAR TAREA ESTILO*/
+.parrafo-tarea {
+  font-size: 1.7rem;
+  letter-spacing: 1px;
+  font-family: "Outfit", sans-serif;
+  text-decoration: 3px underline #4e529b;
+  border-bottom: 2px solid rgb(117, 12, 82);
+  margin: 1rem 0 0 0;
+
+}
+
+.agregar-tarea {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+}
+
+.form-ingresar {
+  display: flex;
+  flex-direction: column;
+  font-family: "Outfit", sans-serif;
+  font-size: 1.5rem;
+  letter-spacing: 1.1px;
+}
+
+.form-ingresar label {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.form-ingresar input {
+  padding: 1rem;
+  margin: 1rem 0;
+  width: 20rem;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+}
+
+.input-grande {
+  width: 20rem;
+  height: 5rem;
+}
+
+#btn-agregar {
   margin: 1rem auto;
   font-family: "Roboto", sans-serif;
   font-size: 1.3rem;
 }
-#btn-agregar:hover{
+
+#btn-agregar:hover {
   background: #a2546fad;
   color: #ecdfd9;
 }
 
 /*segunda tabla*/
 
-.tareas-completadas{
+.tareas-completadas {
   text-align: center;
   font-size: 2rem;
   letter-spacing: 1px;
